tests/sumo/meso/junction_control/tls_coordination/bad/control_tlsPenalty_flowPenalty/options.sumo
--no-step-log --verbose --net-file=net.net.xml --routes=input_routes.rou.xml
--meso-junction-control --meso-tls-flow-penalty 1 --meso-tls-penalty 1
